// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipesPage should render correctly 1`] = `
<Fragment>
  <Connect(Header) />
  <article
    className="py-2"
  >
    <div
      className="jumbotron"
    >
      <div
        className="recipes-header"
      >
        <h2>
          recipes
        </h2>
        <hr />
      </div>
      <div
        className="row"
      >
        <div
          className="col-12 my-4"
        >
          <input
            className="form-control"
            name="searchRecipe"
            onChange={[Function]}
            placeholder="Search Recipes"
            type="text"
            value=""
          />
        </div>
      </div>
      <button
        className="btn btn-link ml-3"
        onClick={[Function]}
        type="button"
      >
        add
      </button>
      <table
        className="table"
      >
        <tbody>
          <RecipeListRow
            deleteRecipe={[Function]}
            key="tacos"
            recipe={
              Object {
                "category": "beef",
                "description": "Tasty homemade tacos - hard or soft",
                "id": "tacos",
                "ingredients": Array [
                  "cheese",
                  "ground beef",
                  "tortilla",
                ],
                "title": "tacos",
              }
            }
            showDelete={true}
          />
          <RecipeListRow
            deleteRecipe={[Function]}
            key="quiche"
            recipe={
              Object {
                "category": "other",
                "description": "Delicious Spinach Quiche and Ham & Cauliflower quiche",
                "id": "quiche",
                "ingredients": Array [
                  "cheese",
                  "pie-crust",
                  "egg",
                ],
                "title": "quiche",
              }
            }
            showDelete={true}
          />
        </tbody>
      </table>
    </div>
  </article>
</Fragment>
`;

exports[`RecipesPage should render correctly while loading 1`] = `
<Fragment>
  <Connect(Header) />
  <article
    className="py-2"
  >
    <div
      className="jumbotron"
    >
      <div
        className="recipes-header"
      >
        <h2>
          recipes
        </h2>
        <hr />
      </div>
      <div
        className="loader"
      />
    </div>
  </article>
</Fragment>
`;

exports[`RecipesPage should render correctly while unauthenticated 1`] = `
<Fragment>
  <Connect(Header) />
  <article
    className="py-2"
  >
    <div
      className="jumbotron"
    >
      <div
        className="recipes-header"
      >
        <h2>
          recipes
        </h2>
        <hr />
      </div>
      <div
        className="row"
      >
        <div
          className="col-12 my-4"
        >
          <input
            className="form-control"
            name="searchRecipe"
            onChange={[Function]}
            placeholder="Search Recipes"
            type="text"
            value=""
          />
        </div>
      </div>
      <table
        className="table"
      >
        <tbody>
          <RecipeListRow
            deleteRecipe={[Function]}
            key="tacos"
            recipe={
              Object {
                "category": "beef",
                "description": "Tasty homemade tacos - hard or soft",
                "id": "tacos",
                "ingredients": Array [
                  "cheese",
                  "ground beef",
                  "tortilla",
                ],
                "title": "tacos",
              }
            }
            showDelete={false}
          />
          <RecipeListRow
            deleteRecipe={[Function]}
            key="quiche"
            recipe={
              Object {
                "category": "other",
                "description": "Delicious Spinach Quiche and Ham & Cauliflower quiche",
                "id": "quiche",
                "ingredients": Array [
                  "cheese",
                  "pie-crust",
                  "egg",
                ],
                "title": "quiche",
              }
            }
            showDelete={false}
          />
        </tbody>
      </table>
    </div>
  </article>
</Fragment>
`;
